Platform list Game list (only 200 no filter right now) Game Detail Images list Pipes (domseguro for security issues with images and noImage)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-
-<app-navbar></app-navbar>
+<div class="container-fluid p-0" style="background: #262a40;" >
+  <div class='container p-0'>
+      <app-navbar></app-navbar>
+  </div>
+</div>
 
 
 <div class="container mainContainer">
