--- a/src/app/components/platform-list/platform-list.component.html
+++ b/src/app/components/platform-list/platform-list.component.html
@@ -1,3 +1,12 @@
-<p>
-  platform-list works!
-</p>
+<div class="card-columns">
+
+  <div class="card" *ngFor="let platform of platforms">
+    <img class="card-img-top img-responsive" [src]="platform | NoPicPipe"  alt="{{platform.name}}">
+    <div class="card-body">
+      <h5 class="card-title">{{platform.name}}</h5>
+      <p class="card-text">{{platform.slug}}</p>
+      <a [href]='platform.url' target="_blank" class="btn btn-outline-info btn-block">See card <i class="fas fa-external-link-alt" style="float: right; margin: 4px;"></i></a>
+    </div>
+  </div>
+  
+</div>
