--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,25 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" [routerLink]="['home']">
+    <img src="assets/imgs/Video-Game-Controller-Icon.png" width="64" height="64">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" [routerLink]="['home']">
-    <img src="../../../../assets/imgs/Video-Game-Controller-Icon.png" width="64" height="64">
-  </a>
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
+    <ul class="navbar-nav mt-2 mt-lg-0">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['games']"><i class="fas fa-gamepad fa-2x"></i> </a>
+        <a class="nav-link" [routerLink]="['games']">GAMES</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['platforms']">
-          <i class="fas fa-laptop fa-2x"></i> </a>
+        <a class="nav-link" [routerLink]="['platforms']">PLATFORMS </a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <!-- <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form> -->
   </div>
 </nav>
