--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,57 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800|Open+Sans:300,400,600,800');
 
-body, html {
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Open Sans', sans-serif;
+*{
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    /* font-family: 'Montserrat', sans-serif!important; */
+    /* font-family: 'Open Sans', sans-serif!important; */
+    font-size: 18px!important;
+    font-weight: 400!important;
 } 
 
+/* Center Navbar */
+.navbar-default > .container-fluid {   
+    display: flex;
+    justify-content: center;
+}
+/* Center Navbar */
+
 .mainContainer {
-    margin: 40px 0 0 30px;
+    margin: 20px 0 0 0;
+}
+
+li.nav-item {
+    border-left: 1px dotted white;
+    letter-spacing: 3px;
+    padding: 0 30px 0 30px;
+}
+
+li.nav-item:last-child {
+    border-left: 1px dotted white;
+    letter-spacing: 3px;
+    padding: 0 0 0 30px;
+}
+
+
+@media screen and (max-width: 768px) {
+
+li.nav-item {
+    font-size: 14px;
+    border: none;
+    border-bottom: 1px dotted white;
+    letter-spacing: 3px;
+    padding: 0;
+}
+
+li.nav-item:last-child {
+    border: none;
+    font-size: 14px;
+    letter-spacing: 3px;
+    padding: 0;
+}
+
 }
